--- a/index.html
+++ b/index.html
@@ -13,30 +13,26 @@
 															form online, online truck driver application, CDL application online,truck driver recruiter,truck driver recruiting,
 															truck driver application,CDL driver application, CDL driver recruiting,application for driver job,application for truck drivers,driver job application,Web based Driver Applications" />
 	<meta name="author" content="Enlistics Inc." />
-	<!-- Favicons (created with http://realfavicongenerator.net/)
-	Have not changed from here down to rest of head****-->
-	<link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-touch-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="img/favicons/apple-touch-icon-60x60.png">
-	<link rel="icon" type="image/png" href="img/favicons/favicon-32x32.png" sizes="32x32">
-	<link rel="icon" type="image/png" href="img/favicons/favicon-16x16.png" sizes="16x16">
-	<link rel="manifest" href="img/favicons/manifest.json">
-	<link rel="shortcut icon" href="img/favicons/favicon.ico">
+	<link rel="shortcut icon" href="http://enlistics.com/favicon.ico">
 	<meta name="msapplication-TileColor" content="#00a8ff">
-	<meta name="msapplication-config" content="img/favicons/browserconfig.xml">
 	<meta name="theme-color" content="#ffffff">
 	<!-- Normalize -->
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<!-- Owl -->
-	<link rel="stylesheet" type="text/css" href="css/owl.css">
+	<!-- Form Validator -->
+	 <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.3/css/bootstrapValidator.min.css"/>
 	<!-- Animate.css -->
 	<link rel="stylesheet" type="text/css" href="css/animate.css">
-	<!-- Elegant Icons -->
-	<link rel="stylesheet" type="text/css" href="fonts/eleganticons/et-icons.css">
 	<!-- Main style -->
 	<link rel="stylesheet" type="text/css" href="css/enlistics.css">
+	<script src="js/typed3.js"></script>
+	<script src="js/typed2.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
+
+
+
 
 <!-- Preloader -->
 <body>
@@ -63,12 +59,10 @@
 					<li><a href="#about">About Us</a></li>
 					<li><a href="#features">Features</a></li>
 					<li><a href="#pricing">Pricing</a></li>
+					<li><a href="http://blog.enlistics.com/">Blog</a></li>
 					<li><a href="http://app.enlistics.com" class="login">Login</a></li>
 				</ul>
-			</div>
-			<!-- /.navbar-collapse -->
-		</div>
-		<!-- /.container-fluid -->
+
 	</nav>
 	<header id="intro">
 		<div class="container">
@@ -77,9 +71,9 @@
 					<div class="row">
 						<div class="col-md-12 text-center">
 							<h2 class="light white">Hire Drivers The Smarter Way</h3>
-							<h1 class="white typed">Better. Faster. Cheaper. </h1>
+								<h1 class="white typedeffect"> </h1>
+								<h1 class="white typed">Better. Faster. Cheaper. </h1>
 							<span class="typed-cursor"></span>
-							<!-- <p><a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-blue">Try It For Free</a></p> -->
 							<p><a href="https://app.enlistics.com/signup/" class="btn btn-blue">Try It For Free</a></p>
 						</div>
 					</div>
@@ -94,15 +88,16 @@
 		</a>
 	</header>
 
-<section>
-	<section id="about" class="section section-padded">
-		<div class="container">
-			<div class="row text-center title">
-				<h2 class="section-head">Simplify your hiring</h2>
-				<h4 class="light muted" id="descrip"> Enlistics is an online job application system built specifically for CDL drivers. </h4>
-			  <h4 class="light muted" id="descrip"> Collect all the paperwork, run background checks, and hire lightning fast, all in one place.</h4>
-			</div>
-	</section>
+	<section>
+		<section id="about" class="section section-padded">
+			<div class="container">
+				<div class="row text-center title">
+					<h2 class="section-head">Online job applications built specifically for carriers</h2>
+				  <h4 class="light muted" id="descrip"> Simplify your hiring: Collect paperwork, run background checks, and manage your hiring, all in one place.</h4>
+					<h4 class="light muted" id="descrip"> You'll forget you even had a filing cabinet. </h4>
+
+				</div>
+		</section>
 
 	<section id="features" class="section section-padded">
 		<div class="container">
@@ -114,7 +109,7 @@
 				<div class="col-md-4">
 					<div class="feature">
 						<div class="icon-holder">
-							<img src="img/icons/heart-blue.png" alt="" class="icon">
+							<img src="img/guru-blue.png" alt="" class="icon easysetup">
 						</div>
 						<h4 class="heading">Easy Setup</h4>
 						<p class="description">A elementum ligula lacus ac quam ultrices a scelerisque praesent vel suspendisse scelerisque a aenean hac montes.</p>
@@ -123,16 +118,16 @@
 				<div class="col-md-4">
 					<div class="feature">
 						<div class="icon-holder">
-							<img src="img/icons/guru-blue.png" alt="" class="icon">
+							<i class="fa fa-bolt"></i>
 						</div>
-						<h4 class="heading">Fast Applications</h4>
+						<h4 class="heading">Fast Online Applications</h4>
 						<p class="description">A elementum ligula lacus ac quam ultrices a scelerisque praesent vel suspendisse scelerisque a aenean hac montes.</p>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="feature">
 						<div class="icon-holder">
-							<img src="img/icons/weight-blue.png" alt="" class="icon">
+							<i class="fa fa-mouse-pointer"></i>
 						</div>
 						<h4 class="heading">One-Click Background Checks</h4>
 						<p class="description">A elementum ligula lacus ac quam ultrices a scelerisque praesent vel suspendisse scelerisque a aenean hac montes.</p>
@@ -141,16 +136,17 @@
 				<div class="col-md-4">
 					<div class="feature">
 						<div class="icon-holder">
-							<img src="img/icons/heart-blue.png" alt="" class="icon">
+							<i class="fa fa-pencil"></i>
 						</div>
-						<h4 class="heading">E-signatures</h4>
+						<h4 class="heading">E-Signatures</h4>
 						<p class="description">A elementum ligula lacus ac quam ultrices a scelerisque praesent vel suspendisse scelerisque a aenean hac montes.</p>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="feature">
 						<div class="icon-holder">
-							<img src="img/icons/guru-blue.png" alt="" class="icon">
+							<i class="fa fa-arrow-right"></i>
+							<i class="fa fa-arrow-right"></i>
 						</div>
 						<h4 class="heading">Workflow Management</h4>
 						<p class="description">A elementum ligula lacus ac quam ultrices a scelerisque praesent vel suspendisse scelerisque a aenean hac montes.</p>
@@ -159,22 +155,21 @@
 				<div class="col-md-4">
 					<div class="feature">
 						<div class="icon-holder">
-							<img src="img/icons/weight-blue.png" alt="" class="icon">
+							<i class="fa fa-facebook-official"></i>
 						</div>
 						<h4 class="heading">Facebook Integration</h4>
-						<p class="description">A elementum ligula lacus ac quam ultrices a scelerisque praesent vel suspendisse scelerisque a aenean hac montes.</p>
+						<p class="description ">A elementum ligula lacus ac quam ultrices a scelerisque praesent vel suspendisse scelerisque a aenean hac montes.</p>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="cut cut-bottom"></div>
+	</section>
 
-
-	<section id="pricing" class="section section-padded section">
+	<section id="pricing" class="section section-padded">
 		<div class="container">
 			<div class="row title text-center">
-				<h2>Pricing</h2>
-							<h3 class="light muted subtitle">Only <span id="price">$19.99</span>/month. No
+				<h2>No-brainer affordable</h2>
+							<h3 class="light muted subtitle rotating-text-pre">Only <span id="price">$19.99</span>/month. No
 								<div class="rotating-text">
 										<span> contracts. </span>
 										<span> setup fees. </span>
@@ -187,72 +182,68 @@
 						<p class="text-center"><a href="https://app.enlistics.com/signup/" class="btn btn-blue">Try It For Free</a></p>
 		</div>
 	</section>
-	<div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content modal-popup">
-				<a href="#" class="close-link"><i class="icon_close_alt2"></i></a>
-				<h3 class="white">Sign Up</h3>
-				<form action="" class="popup-form">
-					<input type="text" class="form-control form-white" placeholder="Full Name">
-					<input type="text" class="form-control form-white" placeholder="Email Address">
-					<div class="dropdown">
-						<button id="dLabel" class="form-control form-white dropdown" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Pricing Plan
-						</button>
-						<ul class="dropdown-menu animated fadeIn" role="menu" aria-labelledby="dLabel">
-							<li class="animated lightSpeedIn"><a href="#">1 month membership ($150)</a></li>
-							<li class="animated lightSpeedIn"><a href="#">3 month membership ($350)</a></li>
-							<li class="animated lightSpeedIn"><a href="#">1 year membership ($1000)</a></li>
-							<li class="animated lightSpeedIn"><a href="#">Free trial class</a></li>
-						</ul>
+
+	<section id="rep-contact" class="section section-padded">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6 text-center">
+					<h4 class="balance-text"> Questions? Have a Representative Contact You. </h4>
+				</div>
+
+				<div class="col-sm-4">
+
+					<form id="emailForm" action="" enctype="multipart/form-data" method="post"	data-toggle="validator">
+						<!-- <span class="fa fa-envelope"></span> -->
+						<input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter your email address"
+								data-error="That email address is invalid">
+    							<small id="emailHelp" class="form-text text-muted">  We'll never share your email with anyone else.</small>
+									<div class="help-block with-errors"></div>
+
+									</div>
+
+					<div class="col-sm-2 input-group-btn">
+						<button class="btn-small btn btn-blue" type="submit" name="submit" value="Submit">Send</button>
 					</div>
-					<div class="checkbox-holder text-left">
-						<div class="checkbox">
-							<input type="checkbox" value="None" id="squaredOne" name="check" />
-							<label for="squaredOne"><span>I Agree to the <strong>Terms &amp; Conditions</strong></span></label>
-						</div>
-					</div>
-					<button type="submit" class="btn btn-submit">Submit</button>
+
+        </div>
+    </div>
 				</form>
+
 			</div>
 		</div>
-	</div>
+
+	</section>
+
 	<footer>
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-6 text-center-mobile">
-					<h3 class="white">Reserve a Free Trial Class!</h3>
-					<h5 class="light regular light-white">Shape your body and improve your health.</h5>
-					<a href="#" class="btn btn-blue ripple trial-button">Start Free Trial</a>
+				<div class="col-sm-6">
+					<h3 class="white footer-title">Blog</h3>
+					<h5><a href="http://blog.enlistics.com/three-steps-to-build-the-best-truck-driver-recruiting-plan/" class="light regular blog-title">Three steps to build the best truck driver recruiting plan</a></h5>
+					<p class="light-white balance-text"> "Before we go any further, answer this question: Have you ever had a hard time meeting your driver recruiting targets?...""</p>
 				</div>
-				<div class="col-sm-6 text-center-mobile">
-					<h3 class="white">Opening Hours <span class="open-blink"></span></h3>
-					<div class="row opening-hours">
-						<div class="col-sm-6 text-center-mobile">
-							<h5 class="light-white light">Mon - Fri</h5>
-							<h3 class="regular white">9:00 - 22:00</h3>
-						</div>
-						<div class="col-sm-6 text-center-mobile">
-							<h5 class="light-white light">Sat - Sun</h5>
-							<h3 class="regular white">10:00 - 18:00</h3>
-						</div>
-					</div>
+				<div class="col-md-6 text-right">
+					<h3 class="white footer-title">Contact</h3>
+					<address class="md-margin-bottom-40 light-white">
+						5235 S Harper Ct, #1100<br/>
+						Chicago, IL - 60615 <br/>
+						Phone: 419.205.6647 <br/>
+						Email: <a href="/cdn-cgi/l/email-protection#04676b6a7065677044416a686d77706d67772a676b69" >
+							<span class="__cf_email__" data-cfemail="43202c2d3722203703062d2f2a30372a20306d202c2e">[email&#160;protected]</span><script data-cfhash='f9e31' type="text/javascript">/* <![CDATA[ */!function(t,e,r,n,c,a,p){try{t=document.currentScript||function(){for(t=document.getElementsByTagName('script'),e=t.length;e--;)if(t[e].getAttribute('data-cfhash'))return t[e]}();if(t&&(c=t.previousSibling)){p=t.parentNode;if(a=c.getAttribute('data-cfemail')){for(e='',r='0x'+a.substr(0,2)|0,n=2;a.length-n;n+=2)e+='%'+('0'+('0x'+a.substr(n,2)^r).toString(16)).slice(-2);p.replaceChild(document.createTextNode(decodeURIComponent(e)),c)}p.removeChild(t)}}catch(u){}}()/* ]]> */</script></a>
+					</address>
 				</div>
-			</div>
-			<div class="row bottom-footer text-center-mobile">
-				<div class="col-sm-8">
-					<p>&copy; 2015 All Rights Reserved. Powered by <a href="http://www.phir.co/">PHIr</a> exclusively for <a href="http://tympanus.net/codrops/">Codrops</a></p>
 				</div>
-				<div class="col-sm-4 text-right text-center-mobile">
-					<ul class="social-footer">
-						<li><a href="http://www.facebook.com/pages/Codrops/159107397912"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="http://www.twitter.com/codrops"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="https://plus.google.com/101095823814290637419"><i class="fa fa-google-plus"></i></a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
 	</footer>
+
+	<div class="container">
+	<div class="row col-sm-6">
+		<p id="copyright">
+			2017 &copy; Enlistics. All Rights Reserved.
+			<a href="privacy.html">Privacy Policy</a>
+		</p>
+	</div>
+</div>
+
 	<!-- Holder for mobile navigation -->
 	<div class="mobile-nav">
 		<ul>
@@ -260,14 +251,18 @@
 		<a href="#" class="close-link"><i class="arrow_up"></i></a>
 	</div>
 	<!-- Scripts -->
-	<script src="http://use.fontawesome.com/f9001c39ac.js"></script>
 	<script src="js/jquery-1.11.1.min.js"></script>
+	<script src="http://use.fontawesome.com/f9001c39ac.js"></script>
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/wow.min.js"></script>
 	<script src="js/typewriter.js"></script>
 	<script src="js/jquery.onepagenav.js"></script>
 	<script src="js/main.js"></script>
+	<script src="https://cdnjs.com/libraries/1000hz-bootstrap-validator"></script> <!-- Font validator -->
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/balance-text/2.0.0/jquery.balancetext.min.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.3/js/bootstrapValidator.min.js"> </script>
+	<script src="js/smoothscroll.js"></script>
 </body>
 
 </html>
